-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.5.0 FF
-
None
-
5595809245 (qt/qtdeclarative/dev) 5595809245 (qt/tqtc-qtdeclarative/dev)
Received signal 11 (SIGSEGV), code 2, for address 0x0000000000000000 testPropertyRead function time: 1ms, total time: 14ms qt-testrunner.py INFO: Test process exited with code: -11 qt-testrunner.py ERROR: Failed to parse the XML log file: /Users/qt/work/testresults/tst_qifsimulationengine-1669515687417.xml
Details: https://testresults.qt.io/coin/integration/qt/qtinterfaceframework/tasks/1680146279
Tested changes (refs/builds/qtci/dev/1669515639):
https://codereview.qt-project.org/c/qt/qtinterfaceframework/+/445553/2 Update dependencies on 'dev' in qt/qtinterfaceframework
| For Gerrit Dashboard: QTBUG-108906 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 445784,2 | QQmlNotifier: Guard against broken meta objects when disconnecting | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |